# monitor-watcher

./: Info.plist  README.md  com.monitor-watcher.app.plist  install_autostart.sh  profile_manager.py  pyproject.toml  run_cli.py  run_tray.py  setup.py  uninstall_autostart.sh
docs/: APP_BUNDLE.md  ARCHITECTURE.md  AUTOSTART.md  CROSS_PLATFORM_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_NOTES.md  QUICKSTART_TRAY.md  SYSTEM_TRAY_SUMMARY.md  TRAY_DESIGN.md  TRAY_SETUP.md  USB_MONITORING.md  WINDOWS_SETUP.md
src/: cli.py  constants.py  controllers.py  main.py  platform_utils.py  profile_manager.py  test_profile.py  tray.py  tray_app.py  tray_demo.py  usb_monitor.py
